@@ -192,16 +192,16 @@ void tagsistant_read_stats_configuration(gchar stats_buffer[TAGSISTANT_STATS_BUF
 		"                     [%c] deduplication\n"
 		"\n"
 		" --> Compile flags:\n\n"
-		"  TAGSISTANT_ENABLE_QUERYTREE_CACHE: %d\n"
-		"     TAGSISTANT_ENABLE_TAG_ID_CACHE: %d\n"
-		"    TAGSISTANT_ENABLE_AND_SET_CACHE: %d\n"
-		"   TAGSISTANT_ENABLE_REASONER_CACHE: %d\n"
-		"      TAGSISTANT_ENABLE_AUTOTAGGING: %d\n"
-		"    TAGSISTANT_ENABLE_DEDUPLICATION: %d\n"
-		"         TAGSISTANT_VERBOSE_LOGGING: %d\n"
-		"         TAGSISTANT_QUERY_DELIMITER: %c (to avoid reasoning use: %s)\n"
-		"        TAGSISTANT_ANDSET_DELIMITER: %c\n"
-		"         TAGSISTANT_INODE_DELIMITER: '%s'\n"
+		"    TAGSISTANT_ENABLE_QUERYTREE_CACHE: %d\n"
+		"       TAGSISTANT_ENABLE_TAG_ID_CACHE: %d\n"
+		"      TAGSISTANT_ENABLE_AND_SET_CACHE: %d\n"
+		"     TAGSISTANT_ENABLE_REASONER_CACHE: %d\n"
+		"        TAGSISTANT_ENABLE_AUTOTAGGING: %d\n"
+		" TAGSISTANT_ENABLE_AUTOTAGGING_THREAD: %d\n"
+		"           TAGSISTANT_VERBOSE_LOGGING: %d\n"
+		"           TAGSISTANT_QUERY_DELIMITER: %c (to avoid reasoning use: %s)\n"
+		"          TAGSISTANT_ANDSET_DELIMITER: %c\n"
+		"           TAGSISTANT_INODE_DELIMITER: '%s'\n"
 		"\n",
 		tagsistant.mountpoint,
 		tagsistant.repository,
@@ -225,7 +225,7 @@ void tagsistant_read_stats_configuration(gchar stats_buffer[TAGSISTANT_STATS_BUF
 		TAGSISTANT_ENABLE_AND_SET_CACHE,
 		TAGSISTANT_ENABLE_REASONER_CACHE,
 		TAGSISTANT_ENABLE_AUTOTAGGING,
-		TAGSISTANT_ENABLE_DEDUPLICATION,
+		TAGSISTANT_ENABLE_AUTOTAGGING_THREAD,
 		TAGSISTANT_VERBOSE_LOGGING,
 		TAGSISTANT_QUERY_DELIMITER_CHAR,
 		TAGSISTANT_QUERY_DELIMITER_NO_REASONING,
